<resources>
    <string name="app_name">Red_Bubble</string>
    <string name="hello_text">Hello</string>
    <string name="again_text">AGAIN!</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="fb_btn">Login in with facebook</string>
    <string name="google_btn">Login in with google</string>
    <string name="sign_up_btn">sign up</string>
    <string name="forgot_pw">Forgot password?</string>
    <string name="create_acc">Create Account</string>

</resources>